Add source dump workflow

--- a/Charisma.csproj
+++ b/Charisma.csproj
@@ -8,9 +8,13 @@
 		
 	</PropertyGroup>
 	<ItemGroup>
+	  <Folder Include=".github\Workflows\" />
 	  <Folder Include="Assets\Textures\UI\" />
 	  <Folder Include="Content\Items\Charms\Timber\Hardmode\" />
 	  <Folder Include="Content\Items\Charms\Timber\PreHardmode\Rot\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include=".github\workflows\release.yml" />
 	</ItemGroup>
 
 	<!-- References -->
